# Cubic

./: #1  .gitignore
Week 10/AI Document Classification and Metadata Extraction/: README.md  requirements.txt
Week_06/: .gitignore  Dockerfile  README.md  requirements.txt
Week_06/app/: chunking.py  config.py  document_loader.py  logger.py  main.py  rag_pipeline.py  schemas.py  vector_store.py  website_loader.py
Week_06/storage/uploads/: AI Discussion.docx
Week_1/llm-rag/: .gitignore  README.md  pyproject.toml  requirements.txt
Week_1/llm-rag/docs/: llm_fundamentals.md
Week_2/rag-eval/: .gitignore
Week_2/rag-eval/src/: rag_pipeline.py
Week_3/: README.md  indexer.py  main.py  utils.py
Week_3/incremental-indexing/: .gitignore  README.md
Week_4/api/: README.md
Week_5/: .gitignore  README.md  architecture.md
Week_5/app/: logger.py  main.py  metrics.py  rag_pipeline.py
Week_5/demo/: demo_steps.md
Week_5/docker/: Dockerfile
Week_5/monitoring/: metrics_explanation.md
Week_7/: .gitignore  README.md  pyproject.toml
Week_7/app/: main.py
Week_7/app/core/: config.py
Week_7/app/routes/: extract.py
Week_7/app/services/: extractor.py  llm_client.py  schema.py
Week_7/app/utils/: text_extract.py
Week_7/examples/: sample_contract.txt  sample_scope.txt
Week_7/scripts/: extract_cli.py
Week_8/: README.md  requirements.txt
Week_8/document_summary_agent/: api.py
Week_8/meeting_minutes_agent/: main.py  sample_input.txt  utils.py
document_summary_agent/: agent.py  main.py  sample_input.txt  utils.py
meeting_minutes_agent/: agent.py  api.py
(+52 files in other folders)
